# hacathoon1-deploy

./: package-lock.json  package.json  temp_description.txt
backend/: .env.example  .gitignore  README.md  check_db.py  check_qdrant.py  manual_test.py  performance_test.py  pyproject.toml  requirements.txt  test_db_imports.py  test_e2e.py  test_health.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  agent.py  query.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  neon.py  qdrant.py  utils.py
backend/app/ingestion/: chunker.py  db_utils.py  embedder.py  reader.py  storage.py
backend/app/models/: __init__.py  agent.py
backend/app/rag/: __init__.py  generator.py  pipeline.py  prompt.py  retriever.py
backend/app/services/: __init__.py  agent_service.py
backend/app/utils/: __init__.py  embeddings.py
backend/scripts/: __init__.py  ingest_book.py
backend/src/: __init__.py
backend/src/agent/: README.md  agent_service.py  config.py  main.py  models.py  retrieval_tool.py  utils.py
backend/src/website_pipeline/: __init__.py  chunker.py  crawler.py  embedder.py  main.py  report_generator.py  result_comparator.py  retrieval_validator.py  storage.py  text_extractor.py  validation.py  validation_config.py  validation_data_models.py  validation_runner.py
backend/tests/: __init__.py  test_agent.py  test_agent_service.py  test_api.py  test_models.py  test_retrieval_tool.py  test_validation.py
backend/tests/api/: test_agent.py
backend/tests/unit/: test_chunker.py
(+132 files in other folders)
